--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,17 @@ jobs:
         env:
           NODE_ENV: production
       
+      - name: Remove CNAME if exists (for GitHub Pages URL)
+        run: |
+          if [ -f ./out/CNAME ]; then
+            rm ./out/CNAME
+          fi
+      
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
           force_orphan: true
+          cname: false
 
